<resources>
    <string name="app_name">NetClan App</string>
    <string name="title_Explore">Explore</string>
    <string name="title_Network">Network</string>
    <string name="title_Chat">Chat</string>
    <string name="title_Contacts">Contacts</string>
    <string name="title_Group">Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="Availability_array">
        <item> Available | Hey Let Us Connect </item>
        <item> Away | Stay Discreet And Watch </item>
        <item> Busy | Do Not Disturb| Will Catch Up Later </item>
        <item> SOS | Emergency! Need Assistance! HELP </item>
    </string-array>


</resources>